@@ -61,7 +61,7 @@
                                                                IsChecked="{Binding IsDoNotShowAgainChecked, RelativeSource={RelativeSource TemplatedParent}}"
                                                                Visibility="Collapsed" />
                         
-                        <ContentControl Content="{Binding CustomItem, RelativeSource={RelativeSource TemplatedParent}}" />
+                        <ContentControl Content="{Binding CustomItem, RelativeSource={RelativeSource TemplatedParent}}" Focusable="False" />
                         
                         <Grid />
                     </DockPanel>
@@ -198,7 +198,7 @@
         <Setter Property="Padding" Value="5,2" />
     </Style>
 
-    <Style TargetType="{x:Type Controls:WPFMessageBoxTextControl}" BasedOn="{StaticResource {x:Type Label}}">
+    <Style TargetType="{x:Type Controls:WPFMessageBoxTextControl}">
         <Setter Property="Focusable" Value="False" />
         <Setter Property="AutomationProperties.AutomationId" Value="65535" />
         <Setter Property="Margin" Value="10,25,40,25" />
@@ -219,6 +219,7 @@
     </Style>
 
     <Style TargetType="{x:Type Controls:WPFMessageBoxScrollViewerControl}" BasedOn="{StaticResource {x:Type ScrollViewer}}">
+        <Setter Property="Focusable" Value="False" />
         <Setter Property="HorizontalScrollBarVisibility" Value="Disabled" />
         <Setter Property="VerticalScrollBarVisibility" Value="Auto" />
     </Style>
@@ -235,6 +236,7 @@
     </Style>
 
     <Style TargetType="{x:Type Controls:WPFMessageBoxDetailsPresenter}">
+        <Setter Property="Focusable" Value="False" />
         <Setter Property="Background" Value="#FFF0F0F0" />
         <Setter Property="Visibility" Value="Collapsed" />
         <Setter Property="Template">
