@@ -23,13 +23,19 @@
                                                 CustomItem="{Binding Options.CustomItem}"
                                                 DockPanel.Dock="Bottom"
                                                 x:Name="PART_ButtonPanel" />
-        
-            <Controls:WPFMessageBoxImageControl Image="{Binding Image}"
-                                                x:Name="PART_ImageControl" />
 
-            <Controls:WPFMessageBoxScrollViewerControl x:Name="PART_ScrollViewerControl">
-                <Controls:WPFMessageBoxTextControl Content="{Binding Message}" x:Name="PART_TextControl" />
-            </Controls:WPFMessageBoxScrollViewerControl>
+            <Grid>
+                <ContentControl Content="{Binding Options.BackgroundControl}" Focusable="False" />
+                
+                <DockPanel>
+                    <Controls:WPFMessageBoxImageControl Image="{Binding Image}"
+                                                        x:Name="PART_ImageControl" />
+
+                    <Controls:WPFMessageBoxScrollViewerControl x:Name="PART_ScrollViewerControl">
+                        <Controls:WPFMessageBoxTextControl Content="{Binding Message}" x:Name="PART_TextControl" />
+                    </Controls:WPFMessageBoxScrollViewerControl>
+                </DockPanel>
+            </Grid>
         </DockPanel>
         
         <Controls:WPFMessageBoxDetailsPresenter Grid.Row="1"
