@@ -3,6 +3,8 @@
 ==============================
 Release 5.*
 ==============================
+2014-06-08    Take care about the focus in the WPFMessageBox
+2014-06-08    In the WPFMessageBox the background can hold an additional object
 2014-06-08    Add style options to modify element styles in the WPFMessageBox
 2014-06-08    In the WPFMessageBox additional controls can be placed
 2014-06-08    If the details are open use another property if resizing the WPFMessageBox is possible or not
